--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,14 @@
-icewm -- authors file.  2025-03-30
+icewm -- authors file.  2025-04-21
 
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Author: Gemineo <vistatec@gemineo.de>
+Author: Fran Serrador <serrador@proton.me>
+Author: Sophie Leroy <sophie@stoquart.com>
+Author: Samanta Magalhaes <samanta_texttrans@outlook.com>
+Author: Davide Aiello <davide.aiello@novilingulists.com>
+Author: Emily Dong <Emily.Dong@excel-gits.com>
+Author: Grace Yu <grace.yu@excel-gits.com>
+Author: Dmitriy Khanzhin <jinn@altlinux.org>
 Author: Eduard Bloch <blade@debian.org>
 Author: Mehmet Akif 9oglu <madanadam@gmail.com>
 Author: Temuri Doghonadze <temuri.doghonadze@gmail.com>
@@ -10,7 +18,6 @@ Author: Ettore Atalan <atalanttore@googlemail.com>
 Author: Aleš Kastner <alkas@volny.cz>
 Author: Yasuhiko Kamata <belphegor@belbel.or.jp>
 Author: Luna  Jernberg <bittin@opensuse.org>
-Author: Dmitriy Khanzhin <jinn@altlinux.org>
 Author: Ferdinand Galko <galko.ferdinand@gmail.com>
 Author: David Medina <medipas@gmail.com>
 Author: Hugo Carvalho <hugokarvalho@hotmail.com>
@@ -21,11 +28,7 @@ Author: Baurzhan Muftakhidinov <baurthefirst@gmail.com>
 Author: Rodrigo Macedo <sottomaiormacedotec@sottomaiormacedo.tech>
 Author: openSUSE Weblate <weblate-noreply@opensuse.org>
 Author: Freek de Kruijf <freek@opensuse.org>
-Author: Sophie Leroy <sophie@stoquart.com>
-Author: Grace Yu <grace.yu@excel-gits.com>
-Author: Davide Aiello <davide.aiello@novilingulists.com>
 Author: Antonio Simón <antonio@trans-mission.com>
-Author: Gemineo <vistatec@gemineo.de>
 Author: Arnold Marko <atomicmind@yahoo.com>
 Author: Foo Bar <foobarcc@segfault.net>
 Author: Vik On <4o3lxdc1y@mozmail.com>
@@ -110,7 +113,6 @@ Author: Sven Åhr <anders.ahr@gmail.com>
 Author: Ewelina Michalowska <ewelina.michalowska@stgambit.com>
 Author: Hwajin Kim <hwajin.kim@e4net.net>
 Author: Robert Taisz <robert.taisz@emerald.hu>
-Author: Emily Dong <Emily.Dong@excel-gits.com>
 Author: George Yacoub <george.yacoub@arabize.com>
 Author: wisememo <46960734+wisememo@users.noreply.github.com>
 Author: Patricia Pazos <pms.malaga@hermestrans.com>
